src/objects/Campaign_Message_Def__c.object
<CustomObject>
    <description>The message campaign message definition. This is the message that is set to enrollments.</description>
    <fields>
        <fullName>Cron__c</fullName>
        <description>A valid cron expression that specifies the scheduling of the messages.</description>
        <inlineHelpText>A valid cron expression that specifies the scheduling of the messages.</inlineHelpText>
        <label>Cron</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>The date on which the absolute message will be sent.</description>
        <inlineHelpText>The date on which the absolute message will be sent.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <inlineHelpText>The format of the campaign message e.g. SMS, IVR etc</inlineHelpText>
        <label>Format</label>
        <picklist>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>The language(s) for the message, in this case, en (English).</description>
        <inlineHelpText>The language(s) for the message, in this case, en (English).</inlineHelpText>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>EN</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Message_Campaign__c</fullName>
        <description>The message campaign related to this message.</description>
        <inlineHelpText>The message campaign related to this message.</inlineHelpText>
        <label>Message Campaign</label>
        <referenceTo>MessageCampaign__c</referenceTo>
        <relationshipLabel>Campaign Messages</relationshipLabel>
        <relationshipName>Campaign_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Message_Key__c</fullName>
        <description>A key uniquely identifying this message.</description>
        <inlineHelpText>A key uniquely identifying this message.</inlineHelpText>
        <label>Message Key</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offset_Time__c</fullName>
        <description>The amount of time from the reference date or current date that will elapse before the message is sent.</description>
        <inlineHelpText>The amount of time from the reference date or current date that will elapse before the message is sent.</inlineHelpText>
        <label>Offset Time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repeat_Every__c</fullName>
        <description>An interval that determines how often the message is sent until the maxDuration period has elapsed.</description>
        <inlineHelpText>An interval that determines how often the message is sent until the maxDuration period has elapsed.</inlineHelpText>
        <label>Repeat Every</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repeat_On__c</fullName>
        <description>The day of the week on which the message will be sent until the maxDuration period has elapsed.</description>
        <inlineHelpText>The day of the week on which the message will be sent until the maxDuration period has elapsed.</inlineHelpText>
        <label>Repeat On</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>The time at which the message will be sent.</description>
        <inlineHelpText>The time at which the message will be sent.</inlineHelpText>
        <label>Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Campaign Message</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>